@@ -1,6 +1,8 @@
 /* STRING.H */
 /* DECUC C */
 
+#ifdef SOME_CRAZY_COMPILER
+
 extern	char *	strcat();
 extern	char *	strchr();
 extern	int	strcmp();
@@ -12,4 +14,6 @@ extern	int	strncmp();
 extern	char *	strncpy();
 extern	int	strneq();
 extern	char *	strrchr();
+
+#endif
 
